--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,41 @@
-node_modules
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+
+# build output
+/dist
+/build
+/.next/
+/out/
+
+# Prisma
+# Ignore the local SQLite database file used for development
+*.db
+*.db-journal
+
+# static analysis cache
+/.eslintcache
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
