--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "opportunity-solution-tree-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.1"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.1",
-    "@eslint/eslintrc": "^3"
-  }
+    "name": "strata-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "prisma generate && next build",
+        "start": "next start",
+        "lint": "next lint",
+        "postinstall": "prisma generate"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.17.0",
+        "@tiptap/core": "^2.3.0",
+        "@tiptap/extension-placeholder": "^2.3.0",
+        "@tiptap/react": "^2.3.0",
+        "@tiptap/starter-kit": "^2.3.0",
+        "lodash": "^4.17.21",
+        "lucide-react": "^0.414.0",
+        "next": "14.2.5",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.4.1",
+        "reactflow": "^11.11.4",
+        "zod": "^3.23.8",
+        "zustand": "^4.5.4"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.13",
+        "@types/lodash": "^4.17.7",
+        "@types/node": "^20.14.10",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "autoprefixer": "^10.4.19",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "14.2.5",
+        "postcss": "^8.4.38",
+        "prisma": "^5.17.0",
+        "tailwindcss": "^3.4.4",
+        "typescript": "^5.5.3"
+    }
 }
