--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "prisma generate && prisma db push && next build",
+        "build": "prisma generate && next build",
         "start": "next start",
         "lint": "next lint",
         "postinstall": "prisma generate"
+    },
+    "prisma": {
+        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
     },
     "dependencies": {
         "@prisma/client": "^5.17.0",
@@ -37,6 +40,7 @@
         "postcss": "^8.4.38",
         "prisma": "^5.17.0",
         "tailwindcss": "^3.4.4",
+        "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
     }
 }
