--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
     },
     "dependencies": {
+        "@next-auth/prisma-adapter": "^1.0.7",
         "@prisma/client": "^5.17.0",
         "@tiptap/core": "^2.3.0",
         "@tiptap/extension-placeholder": "^2.3.0",
@@ -21,6 +22,7 @@
         "lodash": "^4.17.21",
         "lucide-react": "^0.414.0",
         "next": "14.2.5",
+        "next-auth": "^4.24.11",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
