--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "prisma generate && next build",
         "start": "next start",
         "lint": "next lint",
+        "test": "jest",
         "postinstall": "prisma generate"
     },
     "prisma": {
@@ -20,7 +21,7 @@
         "@tiptap/react": "^2.3.0",
         "@tiptap/starter-kit": "^2.3.0",
         "lodash": "^4.17.21",
-        "lucide-react": "^0.414.0",
+        "lucide-react": "^0.535.0",
         "next": "14.2.5",
         "next-auth": "^4.24.11",
         "react": "^18.3.1",
@@ -32,16 +33,23 @@
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.13",
+        "@testing-library/jest-dom": "^6.6.4",
+        "@testing-library/react": "^16.3.0",
+        "@types/jest": "^30.0.0",
         "@types/lodash": "^4.17.7",
-        "@types/node": "^20.14.10",
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18.3.0",
+        "@types/node": "^24.1.0",
+        "@types/react": "^19.1.9",
+        "@types/react-dom": "^19.1.7",
         "autoprefixer": "^10.4.19",
+        "cypress": "^14.5.3",
         "eslint": "^8.57.0",
         "eslint-config-next": "14.2.5",
+        "jest": "^30.0.5",
+        "jest-environment-jsdom": "^30.0.5",
         "postcss": "^8.4.38",
         "prisma": "^5.17.0",
         "tailwindcss": "^3.4.4",
+        "ts-jest": "^29.4.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
     }
