--- a/package.json
+++ b/package.json
@@ -10,47 +10,46 @@
         "test": "jest",
         "postinstall": "prisma generate"
     },
-    "prisma": {
-        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-    },
     "dependencies": {
+        "@auth/prisma-adapter": "^2.10.0",
         "@next-auth/prisma-adapter": "^1.0.7",
-        "@prisma/client": "^5.17.0",
-        "@tiptap/core": "^2.3.0",
-        "@tiptap/extension-placeholder": "^2.3.0",
-        "@tiptap/react": "^2.3.0",
-        "@tiptap/starter-kit": "^2.3.0",
+        "@prisma/client": "^6.13.0",
+        "@tiptap/core": "^3.0.7",
+        "@tiptap/extension-placeholder": "^3.0.7",
+        "@tiptap/pm": "^3.0.7",
+        "@tiptap/react": "^3.0.7",
+        "@tiptap/starter-kit": "^3.0.7",
         "lodash": "^4.17.21",
         "lucide-react": "^0.535.0",
-        "next": "14.2.5",
+        "next": "^15.4.5",
         "next-auth": "^4.24.11",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-hot-toast": "^2.4.1",
         "reactflow": "^11.11.4",
-        "zod": "^3.23.8",
-        "zustand": "^4.5.4"
+        "zod": "^4.0.14",
+        "zustand": "^5.0.7"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.11",
         "@tailwindcss/typography": "^0.5.13",
-        "@testing-library/jest-dom": "^6.6.4",
-        "@testing-library/react": "^16.3.0",
+        "@testing-library/jest-dom": "^6.4.8",
+        "@testing-library/react": "^16.0.0",
         "@types/jest": "^30.0.0",
         "@types/lodash": "^4.17.7",
         "@types/node": "^24.1.0",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
         "autoprefixer": "^10.4.19",
-        "cypress": "^14.5.3",
-        "eslint": "^8.57.0",
-        "eslint-config-next": "14.2.5",
+        "eslint": "^9.32.0",
+        "eslint-config-next": "^15.4.5",
         "jest": "^30.0.5",
         "jest-environment-jsdom": "^30.0.5",
-        "postcss": "^8.4.38",
-        "prisma": "^5.17.0",
-        "tailwindcss": "^3.4.4",
-        "ts-jest": "^29.4.0",
+        "postcss": "^8.5.6",
+        "prisma": "^6.13.0",
+        "tailwindcss": "^4.1.11",
+        "ts-jest": "^29.2.3",
         "ts-node": "^10.9.2",
-        "typescript": "^5.5.3"
+        "typescript": "^5.9.2"
     }
 }
