--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-hot-toast": "^2.4.1",
+        "react-hotkeys-hook": "^5.1.0",
         "reactflow": "^11.11.4",
         "zod": "^4.0.14",
         "zustand": "^5.0.7"
